--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "sideEffects": false,
   "scripts": {
     "dev:build": "webpack --env.development --config ./build/webpack.base.js",
     "dev": "webpack-dev-server --env.development --config ./build/webpack.base.js",
-    "build": "webpack --env.production --config ./build/webpack.base.js"
+    "build": "webpack --env.production --config ./build/webpack.base.js",
+    "dll": "webpack --config ./build/webpack.dll.js"
   },
   "keywords": [],
   "author": "",
@@ -19,18 +21,23 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
+    "add-asset-html-cdn-webpack-plugin": "^1.0.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "purgecss-webpack-plugin": "^1.6.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.1.0",
@@ -39,6 +46,7 @@
     "vue-property-decorator": "^8.2.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.40.2",
+    "webpack-bundle-analyzer": "^3.5.1",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.1",
     "webpack-merge": "^4.2.2"
@@ -48,6 +56,8 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "core-js": "^2.6.9",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "typescript": "^3.6.3",
